<resources>
    <string name="app_name">Nasa Rover Project</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="filter">Filter by camera</string>
    <string name="camera_fhaz">Front Hazard Avoidance Camera</string>
    <string name="camera_rhaz">Rear Hazard Avoidance Camera</string>
    <string name="camera_mast">Mast Camera</string>
    <string name="camera_chemcam">Chemistry and Camera Complex</string>
    <string name="camera_mahli">Mars Hand Lens Imager</string>
    <string name="camera_mardi">Mars Descent Imager</string>
    <string name="camera_navcam">Navigation Camera</string>
    <string name="camera_pancam">Panoramic Camera</string>
    <string name="camera_minites">Miniature Thermal Emission Spectrometer (Mini-TES)</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="some_error_occured">Some Error Occurred</string>
    <string name="camera_default">Default</string>
    <string name="earth_date">Earth Date</string>
    <string name="rover_name">Rover Name</string>
    <string name="camera">Camera</string>
    <string name="status">Status</string>
    <string name="launch_date">Launch Date</string>
    <string name="landing_date">Landing Date</string>
</resources>